css change to fix fontawesome icon alignment issue

--- a/portal/src/main/webapp/css/global_portal.css
+++ b/portal/src/main/webapp/css/global_portal.css
@@ -1406,10 +1406,11 @@ ul.ui-autocomplete li.ui-menu-item { font-size: 0.6em; text-align: left; }
     max-width: 600px;
 }
 
-.rotate-45 {
-    -webkit-transform: rotate(45deg);
-    -moz-transform: rotate(45deg);
-    -ms-transform: rotate(45deg);
-    -o-transform: rotate(45deg);
-    transform: rotate(45deg);
+.fa-lg {
+   line-height: inherit !important;
+   vertical-align: top !important;
+}
+.fa-md {
+   line-height: inherit !important;
+   vertical-align: top !important;
 }
